--- a/aliem/styles/collections/content.styl
+++ b/aliem/styles/collections/content.styl
@@ -86,9 +86,12 @@
                     height: 300 - (k*100)px
         .twitter-tweet-rendered
             margin: auto
-        .adsbygoogle iframe
-            max-width: 100%
-            margin: 0
+        .adsbygoogle
+            width: 100% !important
+            text-align: center
+            iframe
+                max-width: 100%
+                margin: 0
 
 .pagination
     width: 100%
