--- a/aliem/styles/collections/sidebar.styl
+++ b/aliem/styles/collections/sidebar.styl
@@ -13,6 +13,12 @@
     .widget
         background: white
         margin: 0 0 15px 0
+        &.widget_adsense
+            box-shadow: $shadow-2dp
+            &:after
+                content: '* Advertisement may not reflect the views of ALiEM'
+                font-size: 7px
+                padding-left: 5px
         &.widget_text:nth-of-type(2)
             padding: 10px 0
         &.widget_text,
