--- a/aliem/styles/collections/sidebar.styl
+++ b/aliem/styles/collections/sidebar.styl
@@ -14,11 +14,11 @@
         background: white
         margin: 0 0 15px 0
         &.widget_adsense
-            box-shadow: $shadow-2dp
-            &:after
-                content: '* Advertisement may not reflect the views of ALiEM'
-                font-size: 7px
-                padding-left: 5px
+            text-align: center
+            background: transparent
+            ins.adsbygoogle
+                box-shadow: $shadow-2dp
+                background: white
         &.widget_text:nth-of-type(2)
             padding: 10px 0
         &.widget_text,
