add mathjax/asciimath shortcode. closes #96

--- a/aliem/styles/collections/shortcodes/index.styl
+++ b/aliem/styles/collections/shortcodes/index.styl
@@ -3,3 +3,9 @@
 @require './button'
 @require './flex'
 @require './person'
+
+// @stylint off
+.MathJax
+    visibility: visible
+    &:focus
+        outline: 0
