--- a/aliem/styles/collections/content.styl
+++ b/aliem/styles/collections/content.styl
@@ -74,6 +74,8 @@
 #content
     margin-top: 20px
     width: 75%
+    .entry-title
+        padding: 0
     .post-content
         iframe
             max-width: 90%
