--- a/aliem/styles/collections/social-icons.styl
+++ b/aliem/styles/collections/social-icons.styl
@@ -1,16 +1,15 @@
 .sharing-icons
     display: flex
-    margin-bottom: 15px
+    margin-bottom: 10px
 
 .resp-sharing-button
     display: inline-block
-    border-radius: 5px
-    border-width: 1px
-    border-style: solid
+    border-radius: 2px
+    border: 0
     transition: background-color 25ms ease-out, border-color 25ms ease-out, opacity 250ms ease-out
-    margin: 0.5em
-    padding: 0.25em 0.5em
-    font-family: 'Helvetica Neue,Helvetica,Arial,sans-serif'
+    margin-right: 0.5em
+    padding: 0 10px
+    font-family: 'Helvetica Neue,Helvetica,Open Sans,Arial,sans-serif'
     a
         text-decoration: none
         color: white
