--- a/aliem/styles/layout/_content.scss
+++ b/aliem/styles/layout/_content.scss
@@ -76,8 +76,12 @@
 }
 
 #main {
-    padding-top: 135px;
-    background: $secondary;
+    // flex: auto;
+    height: 100%;
+    min-height: 100vh;
+    padding: 0 0 40px 0;
+    // padding-top: 135px !important;
+    background: transparent;
     .post h2 a {
         color: $primary;
         &:hover {
