--- a/aliem/styles/layout/_layout.scss
+++ b/aliem/styles/layout/_layout.scss
@@ -1,6 +1,36 @@
+@import '../variables';
 @import 'header';
 @import 'home';
 @import 'content';
 @import 'sidebar';
 @import 'footer';
 @import 'flex';
+
+html {
+    height: 100%;
+}
+
+body {
+    background: $secondary;
+    margin: 0;
+    min-height: 100%;
+}
+
+#wrapper {
+    min-height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr auto;
+}
+
+header {
+    grid-row: 1;
+}
+
+main {
+    grid-row: 2;
+}
+
+.footer {
+    grid-row: 3;
+}
