--- a/aliem/styles/shortcodes/_button.scss
+++ b/aliem/styles/shortcodes/_button.scss
@@ -6,9 +6,9 @@
     color: $font-secondary;
     background-image: none;
     border: none;
-    border-radius: 2px;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2),
-        0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    border-radius: 2px !important;
+    box-shadow: $shadow-2dp;
+    box-sizing: content-box;
     cursor: pointer;
     display: inline-block;
     font-size: 13px;
@@ -27,7 +27,7 @@
     &::-moz-focus-inner {
         border: 0;
     }
-    &:active:hover {
+    &:active {
         box-shadow: $shadow-4dp;
     }
 }
