--- a/aliem/styles/layout/_content.scss
+++ b/aliem/styles/layout/_content.scss
@@ -1,32 +1,24 @@
 @import '../variables';
 
+.alignleft {
+    float: left;
+    margin-right: 15px;
+}
+
+.alignright {
+    float: right;
+    margin-left: 15px;
+}
+
+.aligncenter {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
 // "post" specific
 .single {
-    #content {
-        margin-top: -15px;
-    }
-    // "Next" and "Previous" buttons at the top of posts
-    .single-navigation {
-        margin-bottom: 0 !important;
-        border: none;
-        a:first-of-type {
-            float: left;
-            margin-left: 10px;
-        }
-        a[rel='prev'],
-        a[rel='next'] {
-            color: $font-gray;
-            &:before,
-            &:after {
-                color: $font-gray;
-            }
-            &:hover,
-            &:hover:before,
-            &:hover:after {
-                color: $font-primary;
-            }
-        }
-    }
     .post {
         background: white;
         padding: 20px;
@@ -76,11 +68,13 @@
 }
 
 #main {
-    // flex: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 100vw;
     height: 100%;
     min-height: 100vh;
-    padding: 0 0 40px 0;
-    // padding-top: 135px !important;
+    padding: 0;
     background: transparent;
     .post h2 a {
         color: $primary;
@@ -90,18 +84,11 @@
     }
 }
 
-#main .fusion-row,
-#slidingbar-area .fusion-row,
-.fusion-footer-copyright-area .fusion-row,
-.fusion-footer-widget-area .fusion-row,
-.fusion-page-title-row,
-.tfs-slider .slide-content-container .slide-content {
-    max-width: 1100px;
-}
-
 #content {
-    margin-top: 20px;
-    width: 75%;
+    width: 600px;
+    max-width: 825px;
+    flex: auto;
+    margin: 20px;
     .entry-title {
         padding: 0;
     }
@@ -134,27 +121,6 @@
     }
 }
 
-.pagination {
-    width: 100%;
-    text-align: center;
-}
-
-.pagination-prev,
-.pagination-next {
-    color: $font-gray;
-    &:before,
-    &:after {
-        color: $font-gray;
-    }
-    &:hover {
-        color: $font-primary;
-        &:before,
-        &:after {
-            color: $font-primary;
-        }
-    }
-}
-
 // Both the "read more" div on the home page and the author meta on posts
 .fusion-meta-info {
     border: 0;
@@ -165,6 +131,9 @@
     line-height: 1.5em;
     > div {
         padding-bottom: 5px;
+    }
+    .updated {
+        display: none;
     }
 }
 
@@ -199,7 +168,6 @@
         margin: auto auto 1.5em;
     }
     #content {
-        margin-top: 0;
         blockquote {
             margin-left: 0;
             margin-right: 0;
