--- a/aliem/styles/style.scss
+++ b/aliem/styles/style.scss
@@ -1,6 +1,11 @@
 /**
  * Template: Avada
  */
+
+* {
+    box-sizing: border-box;
+}
+
 @import 'avada/avada';
 @import 'plugins';
 @import 'shortcodes/shortcodes';
