--- a/aliem/styles/avada/_pagination.scss
+++ b/aliem/styles/avada/_pagination.scss
@@ -54,6 +54,18 @@
     }
 }
 
+@media all and (max-width: 800px) {
+    .single-navigation {
+        margin-top: 20px;
+    }
+}
+
+@media all and (max-width: 600px) {
+    .single-navigation {
+        display: none;
+    }
+}
+
 %pagination-base {
     padding: 4px 8px;
     margin-left: 5px;
