--- a/aliem/styles/layout/_footer.scss
+++ b/aliem/styles/layout/_footer.scss
@@ -1,70 +1,21 @@
 @import '../variables';
 
-// FIXME:
-
-.fusion-footer-copyright-area {
-    z-index: 10;
-    position: relative;
-    padding: 18px 10px 12px;
-    border-top: 1px solid #4b4c4d;
-    background: #282a2b;
-}
-
-.fusion-copyright-content {
-    display: table;
-    width: 100%;
-}
-
-.fusion-copyright-notice {
-    display: table-cell;
-    vertical-align: middle;
-    margin: 0;
-    padding: 0;
-    color: #8c8989;
-    font-size: 12px;
-}
-
-.fusion-copyright-notice a {
-    color: #bfbfbf;
-}
-
-.fusion-body .fusion-footer-widget-area-center .fusion-columns .fusion-column {
-    text-align: center;
-}
-
-.fusion-body .fusion-footer-copyright-center .fusion-copyright-content {
-    display: block;
-    text-align: center;
-}
-
-.fusion-body .fusion-footer-copyright-center .fusion-copyright-notice,
-.fusion-body .fusion-footer-copyright-center .fusion-social-links-footer {
-    display: block;
-    width: 100%;
-    text-align: center;
-}
-
-.fusion-body .fusion-footer-copyright-center .fusion-social-links-footer {
-    margin-top: 20px;
-}
-
-// end FIXME
-
-.fusion-footer-copyright-area,
-.fusion-footer-widget-area {
-    > .fusion-row {
-        padding: 0 30px;
-    }
-}
-
 .footer {
     background-color: #363839;
+    max-width: 100vw;
+}
+
+// main footer
+
+.footer__logo {
+    margin-bottom: 40px;
 }
 
 .footer__container {
     padding: 80px 40px;
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: space-around;
     align-items: flex-start;
     max-width: 1100px;
     margin: auto;
@@ -73,7 +24,9 @@
 .footer__grid {
     width: 800px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    justify-content: center;
+    grid-template-columns: repeat(auto-fit, 200px);
+    grid-gap: 20px;
 }
 
 .footer__grid__item {
@@ -103,42 +56,48 @@
     }
 }
 
-.fusion-footer-widget-area {
-    background-color: #363839;
-    border-top-width: 12px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    border-top: 0 !important;
-    line-height: 20px;
-    .widget-title {
-        letter-spacing: 1.3px;
-        margin-bottom: 20px;
-    }
-    .textwidget {
-        font-size: 0.9em;
-        a {
-            font-weight: 600;
-            &:hover {
-                text-decoration: underline;
-                color: white;
-            }
-        }
-    }
-}
+// footer-copyright
 
-// Fixes mobile footer padding
-.footer-area {
-    padding: 20px 30px 10px;
-}
-
-#footer {
+footer.copyright {
+    max-width: 100vw;
+    width: 100%;
+    background: #282a2b;
+    border-top: 1px solid #4b4c4d;
     a {
+        font-size: 12px;
+        color: #8c8989;
         &:hover {
             color: white !important;
-            opacity: 1;
-            &:not(.fusion-social-network-icon) {
-                text-decoration: underline;
-            }
+            text-decoration: underline;
         }
+    }
+}
+
+.copyright__container {
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    max-width: 1100px;
+    margin: auto;
+}
+
+.copyright__item {
+    display: inline-block;
+    margin: auto 0;
+}
+
+.copyright__item + .copyright__item {
+    padding-left: 10px;
+    margin-left: 10px;
+    border-left: 1px solid #4b4c4d;
+}
+
+.copyright__item--copyright {
+    > a:first-child {
+        margin-right: 10px;
+    }
+    > a {
+        line-height: 30px;
     }
 }
