--- a/aliem/styles/layout/_header.scss
+++ b/aliem/styles/layout/_header.scss
@@ -5,6 +5,7 @@
 header {
     box-shadow: $shadow-3dp;
     max-width: 100vw;
+    z-index: 1;
 }
 
 .header-secondary {
@@ -103,11 +104,8 @@ nav {
 }
 
 .nav-menu__container {
-    // display: flex;
     width: 100%;
-    // max-width: 100vw;
     max-width: 800px;
-    // justify-content: center;
     a {
         color: $font-primary;
         font-size: 0.9em;
@@ -122,7 +120,7 @@ nav {
         & > li {
             padding: 20px;
             flex: auto;
-            width: 200px;
+            width: 225px;
             & > a,
             & > span {
                 font-size: 1.1em;
