--- a/aliem/styles/_plugins.scss
+++ b/aliem/styles/_plugins.scss
@@ -11,6 +11,7 @@
     border-radius: 2px;
     font-size: 0.8em;
     padding: 0 10px 10px 10px;
+    margin-bottom: 20px;
 }
 
 #abt-bibliography::before {
