--- a/aliem/styles/shortcodes/_person.scss
+++ b/aliem/styles/shortcodes/_person.scss
@@ -1,24 +1,24 @@
 @import '../variables';
 
 .person {
-    padding: 5px;
-    margin: 0 5px 10px 5px;
+    display: flex;
+    flex-flow: column nowrap;
+    margin: 0 10px 20px 10px;
     box-shadow: $shadow-2dp;
     border-radius: 2px;
-    height: 400px;
+    width: 300px;
     flex: auto;
 }
 
 .person__img {
-    position: relative;
-    width: 100%;
-    height: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: $secondary;
     img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+        max-width: 100%;
+        max-height: 200px;
+        height: auto;
     }
 }
 
@@ -52,4 +52,11 @@
 .person__background {
     padding: 5px;
     font-size: 0.8em;
+}
+
+@media (max-width: 600px) {
+    .person {
+        float: none !important;
+        margin: 0 auto 20px auto !important;
+    }
 }
