--- a/aliem/styles/avada/_default.scss
+++ b/aliem/styles/avada/_default.scss
@@ -1468,7 +1468,7 @@ body.has-sidebar.double-sidebars #main #sidebar-2 {
 #main {
     padding-bottom: 40px;
 }
-
+/*
 @media only screen and (max-width: 1100px) {
     .width-100 .fusion-section-separator,
     .width-100 .nonhundred-percent-fullwidth {
@@ -2512,7 +2512,7 @@ body.has-sidebar.double-sidebars #main #sidebar-2 {
         line-height: normal;
     }
 }
-
+*/
 /**
  END AVADA DEFAULT
 */
