--- a/aliem/styles/shortcodes/_flex.scss
+++ b/aliem/styles/shortcodes/_flex.scss
@@ -1,12 +1,17 @@
 .flex-grid {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .flex-grid__item {
     flex: 2 0 10%;
     width: auto;
     padding: 10px;
+    @include device-medium {
+        max-width: 300px;
+        min-width: 300px;
+    }
 }
 
 @each $n in (12, 25, 33, 50) {
@@ -14,12 +19,5 @@
         flex: auto;
         max-width: (($n + 2) / 100) * 1100 + px;
         min-width: (($n - 2) / 100) * 1100 + px;
-    }
-}
-
-@media (max-width: 480px) {
-    .flex-grid__item {
-        max-width: 300px;
-        min-width: 300px;
     }
 }
