run updated prettier on all files

--- a/aliem/js/headers/posts/posts-header.scss
+++ b/aliem/js/headers/posts/posts-header.scss
@@ -1,6 +1,9 @@
 $social-sites: facebook googleplus twitter;
-$social-icons: (facebook: #005e99, googleplus: #db4437, twitter: #33b1ff);
-
+$social-icons: (
+    facebook: #005e99,
+    googleplus: #db4437,
+    twitter: #33b1ff
+);
 $header-height: 60px;
 $header-height-mobile: 40px;
 
