--- a/src/styles/layout/_content.scss
+++ b/src/styles/layout/_content.scss
@@ -166,9 +166,7 @@
 }
 
 .fusion-single-line-meta {
-    > div {
-        padding-top: 5px;
-    }
+    font-size: 0.8em;
 }
 
 // Gigantic image above pages
