--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -32,21 +32,17 @@ a {
 
 // Headings --------------------------------------------------------------------
 h1 {
-    font-size: 1.5rem;
-    font-weight: 300;
+    font-size: 2rem;
+    font-weight: 600;
 
-    &.entry-title {
-        font-weight: 600;
+    &.entry-title a {
+        color: $font-primary;
+        transition: 0.1s;
 
-        a {
-            color: $font-primary;
+        &:hover {
+            text-decoration: none;
             transition: 0.1s;
-
-            &:hover {
-                text-decoration: none;
-                transition: 0.1s;
-                color: $primary;
-            }
+            color: $primary;
         }
     }
 }
@@ -91,8 +87,7 @@ h5,
 h6 {
     clear: both;
     line-height: 1.4;
-    margin: 0 0 0.75em;
-    padding: 1.5em 0 0;
+    margin: 0.67em 0;
 
     &:first-child {
         padding-top: 0;
